fix rules